<resources>
    <string name="app_name">부산여행</string>
    <string name="app_name2">부산여행 Busan Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- menu -->
    <string name="menu_home">Home</string>
    <string name="menu_diary">기록하기</string>
    <string name="menu_diary_sub">여행 일기</string>
    <string name="menu_food_course">푸디 투어</string>
    <string name="menu_cafe">카페 투어</string>
    <string name="menu_mytrip">My Trip</string>
    <string name="menu_checklist">체크리스트</string>
    <string name="menu_map">지도</string>
    <string name="menu_culture">문화 / 관광 한눈에 보기</string>
    <string name="menu_restaurant">음식점 / 카페 한눈에 보기</string>
    <string name="menu_publicTraffic">대중교통 한눈에 보기</string>
    <string name="menu_hospital">의료시설 한눈에 보기</string>
    <string name="menu_course">코스</string>
    <string name="menu_course_recommend">추천코스 보기</string>
    <string name="menu_course_food">추천 먹거리/카페</string>
    <string name="menu_chatting">채팅</string>
    <string name="menu_chatting_sub">여행 채팅</string>

    <string name="home_second">Home Second</string>

    <!-- Home -->
    <string name="Featured">부산 경치 보고 가실게요~</string>
    <string name="MostViewed">부산에 왔으면 부산 음식은 먹어줘야지~</string>
    <string name="Categories">부산에서 35곳의 낭만카페를 즐겨보세요!</string>
    <string name="Categories_more">더보기 ></string>

    <string name="today">날짜</string>
    <string name="celsius">°C</string>
    <string name="temperature_number">00.00</string>
    <string name="WeatherImage">Weather Icon</string>

    <string name="icon_Food">음식점/카페</string>
    <string name="icon_Culture">문화/관광</string>
    <string name="icon_Traffic">대중교통</string>
    <string name="icon_Hospital">의료시설</string>

    <!--로그인-->
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_account">가입하기</string>

    <string name="Logo">Logo</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>

    <!-- text -->
    <string name="prompt_trip_name">여행명을 입력하세요</string>
    <string name="prompt_start_date">여행 일자를 선택하세요</string>
    <string name="search_title">Cities</string>
    <string name="sample_state">Delhi</string>

    <string name="prompt_title">제목을 입력하세요</string>
    <string name="prompt_content">내용을 입력하세요</string>

    <string name="calendar_date">YYYY/MM/DD</string>

    <string name="test">test</string>

    <string name="CourseTitle">Course Title</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>

    <!-- Image Description -->
    <string name="EventImage">Event Icon</string>
    <string name="LocationImage">Location Icon</string>
    <string name="LoginImage">Login Icon</string>
    <string name="FoodImage">Food Icon</string>
    <string name="CultureImage">Culture Icon</string>
    <string name="PublicTrafficImage">PublicTraffic Image</string>
    <string name="HospitalImage">Hospital Icon</string>

    <string name="FoodCourseImage">Food Image</string>

    <!-- Button Text -->
    <string name="prompt_add_trip">저장</string>

    <string name="wrong_date_alert">지나간 일자는 선택할 수 없습니다.</string>

    <string name="trip_name_blank">여행명을 입력해주세요.</string>
    <string name="trip_date_blank">일자를 선택해주세요.</string>
    <string name="trip_city_blank">지역을 선택해주세요.</string>

    <string name="progress_wait">잠시만 기다려주세요.</string>
    <string name="trip_added">Trip added</string>

    <!-- Cafe Cities -->
    <string name="JungGu">#중구</string>
    <string name="SeoGu">#서구</string>
    <string name="DongGu">#동구</string>
    <string name="NamGu">#남구</string>
    <string name="YoungDoGu">#영도구</string>
    <string name="BusanJinGu">#부산진구</string>
    <string name="HaeWoonDae">#해운대</string>
    <string name="DongRaeGu">#동래구</string>
    <string name="BukGu">#북구</string>
    <string name="SaSangGu">#사상구</string>
    <string name="GiJangGun">#기장군</string>
    <string name="SaHaGu">#사하구</string>
    <string name="GeumJeongGu">#금정구</string>
    <string name="GangSeoGu">#강서구</string>
    <string name="YeonJeGu">#연제구</string>
    <string name="SuYoungGu">#수영구</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>