<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/menu_checklist">
        <menu>
            <item
                android:id="@+id/nav_checklist"
                android:checkable="true"
                android:icon="@drawable/checklist"
                android:title="@string/menu_checklist" />
        </menu>
    </item>

    <item android:title="@string/menu_chatting">
        <menu>
            <item
                android:id="@+id/nav_chatting"
                android:checkable="true"
                android:icon="@drawable/chatting"
                android:title="@string/menu_chatting_sub" />

        </menu>

    </item>

    <item android:title="@string/menu_mytrip">
        <menu>
            <item
                android:id="@+id/nav_mytrip"
                android:checkable="true"
                android:icon="@drawable/mytrip"
                android:title="@string/menu_mytrip" />
        </menu>
    </item>

    <item android:title="@string/menu_diary">
        <menu>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/diary_icon"
                android:title="@string/menu_diary_sub" />
        </menu>
    </item>

    <item android:title="@string/menu_map">
        <menu>
            <item
                android:id="@+id/nav_culture"
                android:checkable="true"
                android:icon="@drawable/culture"
                android:title="@string/menu_culture" />
            <item
                android:id="@+id/nav_eat"
                android:checkable="true"
                android:icon="@drawable/diner"
                android:title="@string/menu_restaurant" />
            <item
                android:id="@+id/nav_publicTrans"
                android:checkable="true"
                android:icon="@drawable/public_trans"
                android:title="@string/menu_publicTraffic" />
            <item
                android:id="@+id/nav_medical"
                android:checkable="true"
                android:icon="@drawable/hospital_icon"
                android:title="@string/menu_hospital" />
        </menu>
    </item>

    <item android:title="@string/menu_course">
        <menu>
            <item
                android:id="@+id/nav_alltrip"
                android:checkable="true"
                android:icon="@drawable/course"
                android:title="@string/menu_course_recommend" />

            <item
                android:id="@+id/nav_cafe"
                android:checkable="true"
                android:icon="@drawable/food_course"
                android:title="@string/menu_course_food" />
        </menu>
    </item>
</menu>